--- a/web/index.html
+++ b/web/index.html
@@ -19,18 +19,18 @@
   <meta name="referrer" content="no-referrer">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Ahmed Yasser's Flutter portfolio application.">
+  <meta name="description" content="Ahmed Yasser's Flutter Portfolio web application">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Ahmed Portfolio">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-title" content="Ahmed Yasser">
+  <link rel="apple-touch-icon" href="favicon.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>Ahmed Yasser Portfolio</title>
+  <title>Ahmed Yasser</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
